# bloblog

./: .gitignore  Makefile  README.md  pyproject.toml
.benchmarks/Darwin-CPython-3.13-64bit/: 0001_baseline.json
benchmarks/: NUMPY_CODEC_BENCHMARKS.md  README.md  __init__.py  bench_codecs.py  bench_decode_only.py  bench_logging.py  bench_numpy_codec.py  bench_pandas_codec.py  bench_pipelines.py  bench_pubsub_micro.py  bench_pubsub_optimizations.py  bench_reading.py  bench_slow_consumer.py  conftest.py  run_benchmarks.py  visualize_performance.py
benchmarks/exploratory/: README.md  __init__.py  bench_pandas_codec.py  bench_pubsub_micro.py  bench_pubsub_optimizations.py  bench_slow_consumer.py
docs/: cli-modes.md
examples/: composite_codecs.py  dataclass_codec.py  log_capture.py  simple.py  webcam_sensor.py  zero_copy_numpy.py
src/bloblog/: __init__.py  bloblog.py  codecs.py  node.py  playback.py  pubsub.py  runner.py
src/tinman/: __init__.py  bloblog.py  builder.py  cli.py  codecs.py  graphviz.py  launcher.py  logging.py  oblog.py  playback.py  pubsub.py  recording.py  run.py  runner.py  runtime.py  stats.py  timer.py
src/tinman/codecs/: COMPOSITE.md  README.md  __init__.py  composite.py  geopandas.py  image.py  numpy.py  pandas.py  protobuf.py
tests/: __init__.py  bloblog_test.py  builder_test.py  cli_test.py  codecs_test.py  composite_codec_test.py  graph_test.py  launcher_test.py  logging_test.py  node_test.py  numpy_codec_test.py  oblog_test.py  playback_test.py  run_test.py  runner_test.py  runtime_test.py  stats_test.py  test_utils.py  timer_test.py
tests/codec_tests/: __init__.py  composite_codec_test.py  numpy_codec_test.py  pandas_codec_test.py
