[project]
name = "bloblog"
version = "0.1.0"
description = "A blob logging and pub/sub node framework"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bloblog"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
